--- a/style/style.css
+++ b/style/style.css
@@ -82,10 +82,12 @@ body {
     justify-content: space-between;
     align-items: center;
     position: absolute;
+    margin-top: -80px;
 }
 
 .choose-ship-container-show {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: absolute;
@@ -99,6 +101,13 @@ body {
     font-size: 50px;
 }
 
+.choose-ship-container-show h4 {
+    font-family: "Obitron";
+    color: white;
+    font-size: 30px;
+    margin-top: -10px;
+}
+
 .choose-ship-container-hide {
     display: none;
 }
@@ -108,9 +117,8 @@ body {
     color: white;
     border: none;
     background-color: transparent;
-    font-size: 22px;
-    margin: 60px;
-    margin-top: 400px;
+    font-size: 25px;
+    margin-top: 300px;
     text-align: center;
 }
 
@@ -122,18 +130,81 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url("../assets/ships/Spaceship_03_GREEN.png");
+    background-size: cover;
+    background-position: center;
+    width: 370px;
+    height: 370px;
+    margin-right: -10px;
 }
 
 .btn-red {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url("../assets/ships/Spaceship_05_RED.png");
+    background-size: cover;
+    background-position: center;
+    width: 315px;
+    height: 315px;
+    margin-right: 20px;
 }
 
 .btn-orange {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url("../assets/ships/Spaceship_02_ORANGE.png");
+    background-size: cover;
+    background-position: center;
+    width: 300px;
+    height: 300px;
+    margin-right: 50px;
+}
+
+.container-show {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-hide {
+    display: none;
+}
+
+.ship-spec-align-show {
+    display: flex;
+    margin-top: 470px;
+    font-family: "Obitron";
+    color: white;
+    font-size: 20px;
+    list-style-type: none;
+    text-align: left;
+}
+
+.ship-spec-align-hide {
+    display: none;
+}
+
+.ship-green-spec {
+    position: relative;
+    left: -125px;
+}
+
+.ship-red-spec {
+    position: relative;
+    right: 5px;
+}
+
+.ship-orange-spec {
+    position: relative;
+    right: -140px;
+}
+
+li {
+    margin-bottom: 20px;
 }
 
 .losingscreen-container-show {
@@ -174,5 +245,7 @@ body {
 .losingscreen-container-hide {
     display: none;
 }
+
+
 
 
