--- a/style/style.css
+++ b/style/style.css
@@ -23,7 +23,7 @@ body {
     align-items: center;
     background-color: #c8dad3;
     font-size: 20px;
-    overflow: hidden;
+    overfow: hidden;
     background-color: #212729;
 }
 
