--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: #c8dad3;
-    font-size: 20px;
+    font-size: 16px;
     overflow: hidden;
     background-color: #212729;
 }
@@ -40,18 +40,18 @@ body {
 
 .headline {
     position: absolute;
-    top: 100px;
+    top: 5rem;
     font-family: "Obitron";
     color: white;
-    font-size: 100px;
+    font-size: 5rem;
 }
 
 .subline {
     position: absolute;
-    top: 220px;
+    top: 12rem;
     font-family: "Obitron";
     color: white;
-    font-size: 80px;
+    font-size: 4rem;
 }
 
 .start-btn-show {
@@ -59,7 +59,7 @@ body {
     justify-content: center;
     align-items: center;
     position: absolute;
-    margin-top: 350px;
+    margin-top: 17,5rem;
     opacity: 1;  
     animation: start-btn-show 3s infinite;
 }
@@ -69,7 +69,7 @@ body {
     color: white;
     background-color: transparent;
     border: none;
-    font-size: 50px;
+    font-size: 2.5rem;
     text-align: center;
 }
 
@@ -83,7 +83,7 @@ body {
     justify-content: space-between;
     align-items: center;
     position: absolute;
-    margin-top: -80px;
+    margin-top: -4rem;
 }
 
 .choose-ship-container-show {
@@ -92,21 +92,21 @@ body {
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 80px;
+    top: 4rem;
     text-align: center;
 }
 
 .choose-ship-container-show h2 {
     font-family: "Obitron";
     color: white;
-    font-size: 50px;
+    font-size: 2.5rem;
 }
 
 .choose-ship-container-show h4 {
     font-family: "Obitron";
     color: white;
-    font-size: 30px;
-    margin-top: -10px;
+    font-size: 1.5rem;
+    margin-top: -0.5rem;
 }
 
 .choose-ship-container-hide {
@@ -118,8 +118,8 @@ body {
     color: white;
     border: none;
     background-color: transparent;
-    font-size: 25px;
-    margin-top: 300px;
+    font-size: 1.25rem;
+    margin-top: 15rem;
     text-align: center;
 }
 
@@ -134,9 +134,9 @@ body {
     background-image: url("../assets/ships/Spaceship_03_GREEN.png");
     background-size: cover;
     background-position: center;
-    width: 370px;
-    height: 370px;
-    margin-right: -10px;
+    width: 18.5rem;
+    height: 18.5rem;
+    margin-right: -0.5rem;
 }
 
 .btn-red {
@@ -146,9 +146,9 @@ body {
     background-image: url("../assets/ships/Spaceship_05_RED.png");
     background-size: cover;
     background-position: center;
-    width: 315px;
-    height: 315px;
-    margin-right: 20px;
+    width: 15.75rem;
+    height: 15.75rem;
+    margin-right: 1rem;
 }
 
 .btn-orange {
@@ -158,9 +158,9 @@ body {
     background-image: url("../assets/ships/Spaceship_02_ORANGE.png");
     background-size: cover;
     background-position: center;
-    width: 300px;
-    height: 300px;
-    margin-right: 50px;
+    width: 15rem;
+    height: 15rem;
+    margin-right: 2.5rem;
 }
 
 .container-show {
@@ -177,10 +177,10 @@ body {
 
 .ship-spec-align-show {
     display: flex;
-    margin-top: 470px;
+    margin-top: 23.5rem;
     font-family: "Obitron";
     color: white;
-    font-size: 20px;
+    font-size: 1rem;
     list-style-type: none;
     text-align: left;
 }
@@ -191,21 +191,21 @@ body {
 
 .ship-green-spec {
     position: relative;
-    left: -120px;
+    left: -6rem;
 }
 
 .ship-red-spec {
     position: relative;
-    right: 0px;
+    right: 0rem;
 }
 
 .ship-orange-spec {
     position: relative;
-    right: -90px;
+    right: -4.5rem;
 }
 
 li {
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
 }
 
 .losingscreen-container-show {
@@ -214,30 +214,30 @@ li {
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 100px;
+    top: 5rem;
 }
 
 .losingscreen-container-show h2 {
     font-family: "Obitron";
     color: white;
-    font-size: 80px;
+    font-size: 4rem;
     text-align: center;
 }
 .losingscreen-container-show h3 {
     font-family: "Obitron";
     color: white;
-    font-size: 50px;
+    font-size: 2.5rem;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 2.5rem;
 }
 
 .btn-losingscreen {
     font-family: "Obitron";
     color: white;
-    font-size: 50px;
+    font-size: 2.5rem;
     border: none;
     background-color: transparent;
-    margin-top: 225px;
+    margin-top: 11.25rem;
     text-align: center;
     opacity: 1;  
     animation: start-btn-show 3s infinite;
