--- a/style/style.css
+++ b/style/style.css
@@ -1,252 +1,260 @@
 @font-face {
-    font-family: "Obitron";
-    font-style: "black";
-    src: url(../assets/font/Orbitron-Black.ttf);
+  font-family: "Obitron";
+  font-style: "black";
+  src: url(../assets/font/Orbitron-Black.ttf);
 }
 
 @keyframes start-btn-show {
-    0%   { opacity: 1; }
-    50%  { opacity: 0; }
-    100% { opacity: 1; }
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes btn-losingscreen {
-    0%   { opacity: 1; }
-    50%  { opacity: 0; }
-    100% { opacity: 1; }
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    background-color: #c8dad3;
-    font-size: 16px;
-    overflow: hidden;
-    background-color: #212729;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background-color: #c8dad3;
+  font-size: 16px;
+  overflow: hidden;
+  background-color: #212729;
 }
 
 .headline-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .headline-container-hide {
-    display: none;
+  display: none;
 }
 
 .headline {
-    position: absolute;
-    top: 5rem;
-    font-family: "Obitron";
-    color: white;
-    font-size: 5rem;
+  position: absolute;
+  top: 5rem;
+  font-family: "Obitron";
+  color: white;
+  font-size: 5rem;
 }
 
 .subline {
-    position: absolute;
-    top: 12rem;
-    font-family: "Obitron";
-    color: white;
-    font-size: 4rem;
+  position: absolute;
+  top: 12rem;
+  font-family: "Obitron";
+  color: white;
+  font-size: 4rem;
 }
 
 .start-btn-show {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    margin-top: 17.5rem;
-    opacity: 1;  
-    animation: start-btn-show 3s infinite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  margin-top: 17.5rem;
+  opacity: 1;
+  animation: start-btn-show 3s infinite;
 }
 
 .start-btn-show button {
-    font-family: "Obitron";
-    color: white;
-    background-color: transparent;
-    border: none;
-    font-size: 2.5rem;
-    text-align: center;
+  font-family: "Obitron";
+  color: white;
+  background-color: transparent;
+  border: none;
+  font-size: 2.5rem;
+  text-align: center;
 }
 
 .start-btn-hide {
-    display: none;
+  display: none;
 }
 
 .btn-container-show {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    position: absolute;
-    margin-top: -4rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  margin-top: -4rem;
 }
 
 .choose-ship-container-show {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 4rem;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 4rem;
+  text-align: center;
 }
 
 .choose-ship-container-show h2 {
-    font-family: "Obitron";
-    color: white;
-    font-size: 2.5rem;
+  font-family: "Obitron";
+  color: white;
+  font-size: 2.5rem;
 }
 
 .choose-ship-container-show h4 {
-    font-family: "Obitron";
-    color: white;
-    font-size: 1.5rem;
-    margin-top: -0.5rem;
+  font-family: "Obitron";
+  color: white;
+  font-size: 1.5rem;
+  margin-top: -0.5rem;
 }
 
 .choose-ship-container-hide {
-    display: none;
+  display: none;
 }
 
 .btn-container-show button {
-    font-family: "Obitron";
-    color: white;
-    border: none;
-    background-color: transparent;
-    font-size: 1.25rem;
-    margin-top: 15rem;
-    text-align: center;
+  font-family: "Obitron";
+  color: white;
+  border: none;
+  background-color: transparent;
+  font-size: 1.25rem;
+  margin-top: 15rem;
+  text-align: center;
 }
 
 .btn-container-hide {
-    display: none;
+  display: none;
 }
 
 .btn-green {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url("../assets/ships/Spaceship_03_GREEN.png");
-    background-size: cover;
-    background-position: center;
-    width: 18.5rem;
-    height: 18.5rem;
-    margin-right: -0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("../assets/ships/Spaceship_03_GREEN.png");
+  background-size: cover;
+  background-position: center;
+  width: 18.5rem;
+  height: 18.5rem;
+  margin-right: -0.5rem;
 }
 
 .btn-red {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url("../assets/ships/Spaceship_05_RED.png");
-    background-size: cover;
-    background-position: center;
-    width: 15.75rem;
-    height: 15.75rem;
-    margin-right: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("../assets/ships/Spaceship_05_RED.png");
+  background-size: cover;
+  background-position: center;
+  width: 15.75rem;
+  height: 15.75rem;
+  margin-right: 1rem;
 }
 
 .btn-orange {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url("../assets/ships/Spaceship_02_ORANGE.png");
-    background-size: cover;
-    background-position: center;
-    width: 15rem;
-    height: 15rem;
-    margin-right: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("../assets/ships/Spaceship_02_ORANGE.png");
+  background-size: cover;
+  background-position: center;
+  width: 15rem;
+  height: 15rem;
+  margin-right: 2.5rem;
 }
 
 .container-show {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
 }
 
 .container-hide {
-    display: none;
+  display: none;
 }
 
 .ship-spec-align-show {
-    display: flex;
-    margin-top: 23.5rem;
-    font-family: "Obitron";
-    color: white;
-    font-size: 1rem;
-    list-style-type: none;
-    text-align: left;
+  display: flex;
+  margin-top: 23.5rem;
+  font-family: "Obitron";
+  color: white;
+  font-size: 1rem;
+  list-style-type: none;
+  text-align: left;
 }
 
 .ship-spec-align-hide {
-    display: none;
+  display: none;
 }
 
 .ship-green-spec {
-    position: relative;
-    left: -6rem;
+  position: relative;
+  left: -6rem;
 }
 
 .ship-red-spec {
-    position: relative;
-    right: 0rem;
+  position: relative;
+  right: 0rem;
 }
 
 .ship-orange-spec {
-    position: relative;
-    right: -4.5rem;
+  position: relative;
+  right: -4.5rem;
 }
 
 li {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .losingscreen-container-show {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 5rem;
 }
 
 .losingscreen-container-show h2 {
-    font-family: "Obitron";
-    color: white;
-    font-size: 4rem;
-    text-align: center;
+  font-family: "Obitron";
+  color: white;
+  font-size: 4rem;
+  text-align: center;
 }
 .losingscreen-container-show h3 {
-    font-family: "Obitron";
-    color: white;
-    font-size: 2.5rem;
-    text-align: center;
-    margin-top: 2.5rem;
+  font-family: "Obitron";
+  color: white;
+  font-size: 2.5rem;
+  text-align: center;
+  margin-top: 2.5rem;
 }
 
 .btn-losingscreen {
-    font-family: "Obitron";
-    color: white;
-    font-size: 2.5rem;
-    border: none;
-    background-color: transparent;
-    margin-top: 11.25rem;
-    text-align: center;
-    opacity: 1;  
-    animation: start-btn-show 3s infinite;
+  font-family: "Obitron";
+  color: white;
+  font-size: 2.5rem;
+  border: none;
+  background-color: transparent;
+  margin-top: 11.25rem;
+  text-align: center;
+  opacity: 1;
+  animation: start-btn-show 3s infinite;
 }
 
 .losingscreen-container-hide {
-    display: none;
+  display: none;
 }
-
-
-
-
